--- a/index.html
+++ b/index.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="./style.css" />
-        <script src="./api-xhr.js"></script>
-    </head>
-    <body>
-        <main>
-            <div id="login-wrapper">
-                <form id="login-form">
-                    <input type="text" name="userId" value="nhnacademy" />
-                    <input type="password" name="userPassword" value="1234" />
-                    <button type="submit">로그인</button>
-                </form>
-            </div>
-            <div id="login-success">
-                <ul>
-                    <li>아이디:<span id="login-userId"></span></li>
-                    <li>이름:<span id="login-userName"></span></li>
-                    <li>카트아이디:<span id="login-cartId"></span></li>
-                </ul>
-            </div>
+<html lang="ko">
+<head>
+    <meta charset="utf-8" />
+    <script src="api.js"></script>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <main>
+        <h1>국내선 항공스케줄 조회</h1>
+        <div class="form-wrapper">
+            <form id="find-form">
+                <select id="departureId" name="departureId" required >
+                    <option value="">공항선택(출발)</option>
+                </select>
+                <select id="arrivalId" name="arrivalId" required>
+                    <option value="" >공항선택(도착)</option>
+                </select>
+                <input id="plandDate" name="plandDate" type="date"   required/>
+                <button type="submit" id="btn-find">조회</button>
+            </form>
+        </div>
 
-            <div class="cart-wrapper">
-                <h1>장바구니</h1>
-                <table id="cart-table" >
-                    <colgroup>
-                        <col style="width:20%" />
-                        <col style="width:20%" />
-                        <col style="width:20%" />
-                        <col style="width:20%" />
-                        <col style="width:20%" />
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th>제품(id)</th>
-                            <th>제품(명)</th>
-                            <th>가격</th>
-                            <th>수량</th>
-                            <th>합계</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-        </main>
-    </body>
+        <div class="schedule-container" id="schedule-container">
+            <table id="schedule-tbl">
+                <thead>
+                    <tr>
+                        <th>항공편명</th>
+                        <th>항공사명</th>
+                        <th>출발시간</th>
+                        <th>도착시간</th>
+                        <th>일반석운임</th>
+                        <th>비즈니석운임</th>
+                        <th>출발공항</th>
+                        <th>도착공항</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+
+                </tbody>
+
+            </table>
+        </div>
+    </main>
+</body>
 </html>
