--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8" />
-    <script src="api.js"></script>
+    <script src="api-xhr.js"></script>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
